--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 #Gradle properties
-quarkusPluginId=io.quarkus
+#Wed Mar 22 22:50:21 JST 2023
 quarkusPluginVersion=2.16.4.Final
-quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
+quarkusPluginId=io.quarkus
+quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformVersion=2.16.4.Final
