Refactor agent, owner, horse, racehorse, stallion, jockey, trainer classes for clarity. Add missing id definition.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -5,7 +5,9 @@ quarkus:
       url: jdbc:h2:file:./data/db;AUTO_SERVER=TRUE
   hibernate-orm:
     database:
-      generation: drop-and-create
+      generation:
+        ~: drop-and-create
     log:
       sql: true
+      format-sql: false
     physical-naming-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
